fix #9, do i like it no, but this is better than broken ui

--- a/css/index.css
+++ b/css/index.css
@@ -164,7 +164,7 @@ body {
  * INFO - BUBBLE
  ************************************************/
 
-.info__bubble {
+#info__bubble {
 	display: flex;
 	grid-column-gap: 8px;
 	align-items: center;
